--- a/Maze/imgui.ini
+++ b/Maze/imgui.ini
@@ -19,7 +19,12 @@ Size=345,166
 Collapsed=0
 
 [Window][Maze Generation Settings]
-Pos=480,127
-Size=357,188
+Pos=645,101
+Size=366,188
+Collapsed=0
+
+[Window][Maze Settings]
+Pos=648,12
+Size=364,365
 Collapsed=0
 
